# senju

./: README.md
avoevents-server/: .gitignore  Cargo.toml  migrations.sql  spin.toml
avoevents-server/crates/commands/: Cargo.toml
avoevents-server/crates/commands/src/: lib.rs  models.rs
avoevents-server/crates/queries/: Cargo.toml
avoevents-server/crates/queries/src/: lib.rs  models.rs
avoevents-server/src/: lib.rs
esp32_humidity/: Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
esp32_humidity/.cargo/: config.toml
esp32_humidity/.devcontainer/: devcontainer.json
esp32_humidity/docs/: README.md
esp32_humidity/scripts/: flash.sh
esp32_humidity/src/: main.rs
