[package]
name = "avoevents-server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
authors = ["Vedang Manerikar <vedang@unravel.tech>"]
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
spin-sdk = { workspace = true }
avoevents-commands = { path = "crates/commands" }
avoevents-queries = { path = "crates/queries" }
[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
