[package]
name = "esp32_humidity"
version = "0.1.0"
authors = ["kapil"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32_humidity"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow       = "=1.0.86"
embedded-svc = "=0.28.0"
esp-idf-svc  = "=0.49.0"
esp-idf-hal  = "=0.44.1"
esp-idf-sys  = "=0.35"
toml-cfg     = "=0.1.3"
log         = "=0.4.22"
serde_json = "1.0"
chrono = "=0.4.38"

[build-dependencies]
embuild = "0.32.0"
toml-cfg     = "=0.1.3"
