[package]
name = "avoevents-commands"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
spin-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
chrono = { workspace = true }
